--- a/index.html
+++ b/index.html
@@ -13,36 +13,36 @@
       <div class ="row">
         <div class ="col-3">
           <div class ="row">
-            <div id="a" class="col">
+            <div id="a" class="col center">
                <p>A</p>
             </div>
           </div>
         <div class ="row">
-           <div id="b"  class="col">
+           <div id="b"  class="col center">
               <p>B</p>
             </div>
         </div>
          </div>
-          <div id="c" class="col-9">
+          <div id="c" class="col-9 center1">
            <p>C</p>
           </div>
       </div>
 
       
       <div class="row">
-          <div id="d" class="col-3">
+          <div id="d" class="col-3 center">
             <p>D</p>
           </div>
-          <div id="e" class="col-8">
+          <div id="e" class="col-8 center">
             <p>E</p>
           </div>
           <div class="col-1">
             <div class ="row">
               
-              <div id="f" class="col">
+              <div id="f" class="col center2">
                 <p>F</p>
               </div>
-              <div id="g" class="col">
+              <div id="g" class="col center2">
                  <p>G</p>   
               </div>
               </div>
